<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#00b359"
    android:gravity="center"
    tools:context="com.example.uts_aplikasi.Komponen2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_provider"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#ffffff"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#00b359"
        android:gravity="center">
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/text"
            android:text="              Sebuah Content Provider atau penyedia konten menyimpan data yang dapat di akses oleh aplikasi lain.
Jadi disini bisa berbagi data dengan  berbagai  aplikasi   yang  disimpan   dalam   paket android provider.
Jenis data yang disimpan adalah jenis data yang umum seperti audio, video, informasi kontak, dan lain sebagainya.
 Sebenarnya   Content   Provider   juga   menyimpan   data   di   user interface sebagai penyedia query dan
pengembalian nilai data seperti untuk  menambah,  mengubah  dan  menghapus  data.
 Data  ini  dapat disimpan dalam file atau database SQLite. \n\n\n\n\n\n\n\n\n\n\n\n\n\n"     android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"/>
        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <GridLayout
                android:id="@+id/activity_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#00b359"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnKom21"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:text="@string/link_materi"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                </LinearLayout>

            </GridLayout>


            <GridLayout
                android:id="@+id/service_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="#00b359"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnKom22"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:text="@string/contoh_syntax"
                        android:textStyle="bold"
                        android:textColor="#000000"/>

                </LinearLayout>

            </GridLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
